--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@hookform/resolvers": "^2.8.8",
 		"apexcharts": "^3.33.2",
 		"axios": "^0.26.1",
+		"chakra-react-select": "^3.1.2",
 		"faker": "5.5.3",
 		"framer-motion": "^6.2.8",
 		"next": "^12.1.0",
