--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,8 +32,7 @@
 				],
 				"alphabetize": {
 					"order": "asc",
-					"ignoreCase": true,
-					"@next/next/no-img-element": false
+					"ignoreCase": true
 				}
 			}
 		]
